Flex-wrap design fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -43,7 +43,8 @@
 .landing-page-city-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  align-content: flex-start;
+  justify-content: space-between;
 }
 
 @media(max-width: 640pt) {
